--- a/front end/style.css
+++ b/front end/style.css
@@ -10,12 +10,12 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: white;
+    background: green;
 }
 
 .wrapper {
     width: 420px;
-    background: black;
+    background: gray;
     color: white;
 }
 
@@ -25,6 +25,7 @@ body {
 }
 
 .wrapper .input-box {
+    position: relative;
     width: 100%;
     height: 50px;
     margin: 30px 0;
@@ -38,4 +39,19 @@ body {
     outline: none;
     border: 2px solid white;
     border-radius: 40px;
+    font-size: 16px;
+    color: white;
+    padding: 20px 45px 20px 20px;
+}
+
+.input-box input::placeholder {
+    color: white;
+}
+
+.input-box i {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
 }
