--- a/front end/profile.css
+++ b/front end/profile.css
@@ -104,3 +104,30 @@
 .profile-edit-btn {
     font-weight: 600;
 }
+
+div.image {
+    padding: 15px;
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+}
+  
+div.image:hover {
+    border: 1px solid #777;
+}
+  
+div.image img {
+    width: 100%;
+    height: auto;
+}
+  
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+
+div.gallery {
+    display: flex;
+    justify-content: center;
+}
