Made all html consistent

--- a/front end/style.css
+++ b/front end/style.css
@@ -7,7 +7,7 @@
 
 /* ----- ----- ----- Login Page ----- ----- -----*/
 
-.body {
+#body {
     display: flex;
     justify-content: center;
     align-items: center;
