fixed login and register containers

--- a/front end/style.css
+++ b/front end/style.css
@@ -6,7 +6,7 @@
 }
 
 /* ----- ----- ----- Login Page ----- ----- -----*/
-#body {
+.container {
     display: flex;
     justify-content: center;
     align-items: center;
