--- a/front end/style.css
+++ b/front end/style.css
@@ -214,3 +214,26 @@ nav ul li a:hover::after {
 }
 
 /* ----- ----- ----- Home ----- ----- ----- */
+
+#profiles {
+    padding-top: 100px;
+}
+
+.column {
+    float: left;
+    padding: 10px;
+}
+  
+.left, .right {
+    width: 10%;
+}
+  
+.middle {
+    width: 80%;
+}
+
+.rows:after {
+    content: "";
+    display: table;
+    clear: both;
+}
