--- a/front end/profile.css
+++ b/front end/profile.css
@@ -7,6 +7,7 @@
     max-width: 93.5rem;
     margin: 0 auto;
     padding: 0 2rem;
+    padding-top: 10rem;
 }
 
 .btn {
@@ -130,4 +131,79 @@ div.desc {
 div.gallery {
     display: flex;
     justify-content: center;
+}
+
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 5%;
+    justify-content: space-between;
+    background-color: black;
+    color: white;
+}
+
+#home {
+    float: left;
+    margin: 10px 15px;
+    padding: 10px;
+}
+
+#home a {
+    font-size: 20px;
+    color: white;
+    text-decoration: none;
+    position: relative;
+}
+
+#home a::after {
+    content: '';
+    width: 0%;
+    height: 3px;
+    background: white;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    transition: 0.5s;
+}
+
+#home a:hover::after {
+    width: 100%;
+}
+
+#nav {
+    float: right;
+    margin-right: 150px;
+}
+#nav ul {
+    text-align: center;
+    list-style: none;
+}
+
+#nav ul li {
+    display: inline-block;
+    margin: 10px 15px;
+}
+
+nav ul li a {
+    font-size: 20px;
+    color: white;
+    text-decoration: none;
+    position: relative;
+}
+
+nav ul li a::after {
+    content: '';
+    width: 0%;
+    height: 3px;
+    background: white;
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    transition: 0.5s;
+}
+
+nav ul li a:hover::after {
+    width: 100%;
 }
