--- a/front end/profile.css
+++ b/front end/profile.css
@@ -1,3 +1,7 @@
+* {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 :root {
     font-size: 10px;
 }
@@ -138,7 +142,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    padding: 20px 5%;
+    padding: 10px 5%;
     justify-content: space-between;
     background-color: black;
     color: white;
