--- a/front end/style.css
+++ b/front end/style.css
@@ -278,6 +278,30 @@ nav ul li a:hover::after {
 .choice-btn:hover {
     cursor: pointer;
 }
+
+.image {
+    display: fixed;
+    margin: 5px;
+    border: 1px solid black;
+    float: left;
+    width: 300px;
+}
+  
+.image img {
+    width: 190px;
+    height: auto;
+}
+  
+.desc {
+    padding: 15px;
+    text-align: center;
+}
+
+.gallery {
+    padding: 165px;
+    display: fixed;
+    justify-content: center;
+}
 /* ----- ----- ----- Matches ----- ----- ----- */
 .matches {
     padding-top: 100px;
