--- a/front end/profile.css
+++ b/front end/profile.css
@@ -1,5 +1,6 @@
 * {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #fff0cf;
 }
 
 :root {
@@ -148,28 +149,29 @@ header {
     width: 100%;
     padding: 10px 5%;
     justify-content: space-between;
-    background-color: black;
-    color: white;
+    background-color: #ffdc92;
 }
 
 #home {
     float: left;
     margin: 10px 15px;
     padding: 10px;
+    background-color: #ffdc92;
 }
 
 #home a {
     font-size: 20px;
-    color: white;
+    color: black;
     text-decoration: none;
     position: relative;
+    background-color: #ffdc92;
 }
 
 #home a::after {
     content: '';
     width: 0%;
     height: 3px;
-    background: white;
+    background: black;
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -183,10 +185,12 @@ header {
 #nav {
     float: right;
     margin-right: 100px;
+    background-color: #ffdc92;
 }
 #nav ul {
     text-align: center;
     list-style: none;
+    background-color: #ffdc92;
 }
 
 #nav ul li {
@@ -196,16 +200,17 @@ header {
 
 nav ul li a {
     font-size: 20px;
-    color: white;
+    color: black;
     text-decoration: none;
     position: relative;
+    background-color: #ffdc92;
 }
 
 nav ul li a::after {
     content: '';
     width: 0%;
     height: 3px;
-    background: white;
+    background: black;
     position: absolute;
     left: 0;
     bottom: -6px;
