--- a/front end/style.css
+++ b/front end/style.css
@@ -1,9 +1,12 @@
 * {
-    background-color: #fff0cf;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+body { 
+    background-color: #fff0cf;
 }
 
 /* ----- ----- ----- Login Page ----- ----- -----*/
@@ -12,12 +15,12 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: whitesmoke;
+    background: #fff0cf;
 }
 
 .login {
     width: 420px;
-    background: white;
+    background: #ffdc92;
     border: 2px solid black;
     backdrop-filter: blur(20px);
     box-shadow: 0 0 10px black;
@@ -41,7 +44,7 @@ h1 {
 .input-box input {
     width: 100%;
     height: 100%;
-    background: transparent;
+    background: #fff0cf;
     border: none;
     outline: none;
     border: 2px solid black;
@@ -66,7 +69,7 @@ h1 {
 .login .btn {
     width: 100%;
     height: 45px;
-    background-color: transparent;
+    background-color: #fff0cf;
     border: none;
     outline: none;
     border-radius: 40px;
@@ -101,7 +104,7 @@ h1 {
 /* ----- ----- ----- Register Page ----- ----- ----- */
 .register {
     width: 420px;
-    background: white;
+    background: #ffdc92;
     border: 2px solid black;
     backdrop-filter: blur(20px);
     box-shadow: 0 0 10px black;
@@ -120,7 +123,7 @@ h1 {
 .register .btn {
     width: 100%;
     height: 45px;
-    background-color: transparent;
+    background-color: #fff0cf;
     border: none;
     outline: none;
     border-radius: 40px;
