--- a/front end/profile.css
+++ b/front end/profile.css
@@ -1,5 +1,8 @@
 * {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+body {
     background-color: #fff0cf;
 }
 
@@ -72,7 +75,7 @@
 .profile-edit-btn {
     font-size: 1.4rem;
     line-height: 1.8;
-    border: 0.1rem solid #dbdbdb;
+    border: 0.2rem solid #000000;
     border-radius: 0.3rem;
     padding: 0 2.4rem;
     margin-left: 2rem;
@@ -118,9 +121,10 @@
 div.image {
     padding: 15px;
     margin: 5px;
-    border: 1px solid #ccc;
+    border: 2px solid #000000;
     float: left;
     width: 300px;
+    background-color: white;
 }
   
 div.image:hover {
@@ -130,11 +134,13 @@ div.image:hover {
 div.image img {
     width: 100%;
     height: auto;
+    background-color: white;
 }
   
 div.desc {
     padding: 15px;
     text-align: center;
+    background-color: white;
 }
 
 div.gallery {
@@ -150,6 +156,7 @@ header {
     padding: 10px 5%;
     justify-content: space-between;
     background-color: #ffdc92;
+    border: 3px solid #000000;
 }
 
 #home {
