touched up the gallery images

--- a/front end/profile.css
+++ b/front end/profile.css
@@ -55,8 +55,7 @@ body {
     border-radius: 50%;
 }
 
-.profile-user-settings,
-.profile-stats,
+.profile-user-settings, .profile-major,
 .profile-bio {
     float: left;
     width: calc(66.666% - 2rem);
@@ -90,30 +89,19 @@ body {
     margin-left: 1rem;
 }
 
-.profile-stats {
-    margin-top: 2.3rem;
-}
-
-.profile-stats li {
-    display: inline-block;
-    font-size: 1.6rem;
-    line-height: 1.5;
-    margin-right: 4rem;
-    cursor: pointer;
-}
-
-.profile-stats li:last-of-type {
-    margin-right: 0;
-}
-
 .profile-bio {
     font-size: 1.6rem;
     font-weight: 400;
     line-height: 1.5;
-    margin-top: 2.3rem;
+    margin-top: 0rem;
 }
 
-.profile-real-name,
+.profile-major {
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 0.5;
+}
+
 .profile-edit-btn {
     font-weight: 600;
 }
@@ -124,7 +112,8 @@ div.image {
     border: 2px solid #000000;
     float: left;
     width: 300px;
-    background-color: white;
+    background-color: #ffdc92;
+    border-radius: 2%;
 }
   
 div.image:hover {
@@ -140,7 +129,7 @@ div.image img {
 div.desc {
     padding: 15px;
     text-align: center;
-    background-color: white;
+    background-color: #ffdc92;
 }
 
 div.gallery {
