app.py and home html changes

--- a/template/home.html
+++ b/template/home.html
@@ -14,7 +14,7 @@
     <div id="nav">
         <nav>
             <ul>
-                <li><a href="matches.html">Matches</a></li>
+                <li><a href="/matches">Matches</a></li>
                 <li><a href="messages.html">Messages</a></li>
                 <li><a href="profile.html">Profile</a></li>
             </ul>
