--- a/template/login.html
+++ b/template/login.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UCI Connected Login</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'>
-    <link href="users.js">
-    <script src="users.js"></script>
+    <link rel="stylesheet" type="text/css" href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'>
 </head>
 
 <body class="container">
@@ -31,14 +29,15 @@
             <div class="link">
                 <p>Don't have an account? <a href="register.html">Register</a></p>
             </div>
-
         </form>
     </div>
 
+    <script src="users.js"></script>
     <script>
         function checkLogin() {
             var email = document.getElementById("email").value;
             var password = document.getElementById("password").value;
+
             fetch("userData.json")
                 .then(response => response.json())
                 .then(data => {
@@ -50,11 +49,6 @@
                     }
                 })
                 .catch(error => console.log(error));
-            if (user) {
-                window.location.href = "home.html";
-            } else {
-                alert("Invalid email or password. Please try again.");
-            }
         }
     </script>
 </body>
