--- a/template/style.css
+++ b/template/style.css
@@ -287,7 +287,7 @@ nav ul li a:hover::after {
     margin: 5px;
     border: 1px solid black;
     float: left;
-    width: 300px;
+    width: 200px;
 }
   
 .image img {
@@ -302,8 +302,9 @@ nav ul li a:hover::after {
 
 .gallery {
     padding: 165px;
-    display: fixed;
+    display: flex;
     justify-content: center;
+    position: fixed
 }
 
 /* ----- ----- ----- Profile Edit ----- ----- ----- */
