--- a/template/static/style.css
+++ b/template/static/style.css
@@ -27,18 +27,19 @@ body {
     color: black;
     border-radius: 10px;
     padding: 30px 40px;
+    text-align: center;
 }
 
 h1 {
     font-size: 36px;
-    text-align: center;
+    margin-bottom: 20px;
 }
 
 .login .input-box {
     position: relative;
     width: 100%;
     height: 50px;
-    margin: 30px 0;
+    margin: 20px 0; /* Adjust the top margin */
 }
 
 .input-box input {
@@ -78,6 +79,7 @@ h1 {
     font-size: 16px;
     color: black;
     font-weight: 600;
+    margin-top: 20px;
 }
 
 .login .btn:hover {
@@ -98,7 +100,7 @@ h1 {
 }
 
 .link p a:hover {
-    text-decoration: underline ;
+    text-decoration: underline;
 }
 
 /* ----- ----- ----- Register Page ----- ----- ----- */
