--- a/template/static/style.css
+++ b/template/static/style.css
@@ -31,6 +31,7 @@ body {
 }
 
 h1 {
+    text-align: center;
     font-size: 36px;
     margin-bottom: 20px;
 }
@@ -340,7 +341,7 @@ label {
     padding: 5px 10px 0px;
 }
 
-input {
+#profile-editor input {
     display: flex;
     margin: 5px 10px ;
     padding: 5px;
