--- a/template/static/style.css
+++ b/template/static/style.css
@@ -27,7 +27,6 @@ body {
     color: black;
     border-radius: 10px;
     padding: 30px 40px;
-    text-align: center;
 }
 
 h1 {
@@ -40,7 +39,7 @@ h1 {
     position: relative;
     width: 100%;
     height: 50px;
-    margin: 20px 0; /* Adjust the top margin */
+    margin: 20px 0;
 }
 
 .input-box input {
@@ -120,7 +119,7 @@ h1 {
     position: relative;
     width: 100%;
     height: 50px;
-    margin: 30px 0;
+    margin: 20px 0;
 }
 
 .register .btn {
@@ -135,6 +134,7 @@ h1 {
     font-size: 16px;
     color: black;
     font-weight: 600;
+    margin-top: 20px;
 }
 
 .register .btn:hover {
