centered the profile editor

--- a/template/profileeditor.html
+++ b/template/profileeditor.html
@@ -25,7 +25,7 @@
 <body>
     <div id="profile-editor">
         <img src="https://t4.ftcdn.net/jpg/00/64/67/63/360_F_64676383_LdbmhiNM6Ypzb3FM4PPuFP9rHe7ri8Ju.jpg" id="profile-pic">
-        <label class="image-label" for="input-file">update image</label>
+        <label class="image-label" for="input-file">Update Image</label>
         <input class="image-input" type="file" accept="image/png, image/jpg, image/jpeg" id="input-file">
         
         
