edited html file to work with app.py

--- a/template/profileeditor.html
+++ b/template/profileeditor.html
@@ -29,19 +29,19 @@
             <div class="column left">
                 <img src="https://t4.ftcdn.net/jpg/00/64/67/63/360_F_64676383_LdbmhiNM6Ypzb3FM4PPuFP9rHe7ri8Ju.jpg" id="profile-pic">
                 <label class="image-label" for="input-file">Update Image</label>
-                <input class="image-input" type="file" accept="image/png, image/jpg, image/jpeg" id="input-file">
+                <input class="image-input" type="file" name="pfpInput" accept="image/png, image/jpg, image/jpeg" id="input-file">
                 
                 <label for="name" id="label-name">Name</label>
-                <input type="text" id="name" placeholder="Name">
+                <input type="text" id="name" name="nameInput" placeholder="Name">
 
                 <label for="age" id="label-age">Age</label>
-                <input type="text" id="age" placeholder="Age">
+                <input type="text" id="age" name="ageInput" placeholder="Age">
 
                 <label for="major" id="label-major">Major</label>
-                <input type="text" id="major" placeholder="Major">
+                <input type="text" id="major" name="majorInput" placeholder="Major">
 
                 <label for="gender" id="label-gender">Gender</label>
-                <select name="gender" id="gender">
+                <select name="genderInput" id="gender">
                     <option value="male">Male</option>
                     <option value="female">Female</option>
                     <option value="transgender">Transgender</option>
@@ -52,7 +52,7 @@
                 </select>
 
                 <label for="orientation" id="label-orientation">Sexual Orientation</label>
-                <select name="orientation" id="orientation">
+                <select name="orientationInput" id="orientation">
                     <option value="straight">Straight</option>
                     <option value="gay">Gay</option>
                     <option value="lesbian">Lesbian</option>
@@ -64,21 +64,21 @@
                 </select>
 
                 <label for="bio" id="label-bio">Bio</label>
-                <input type="text" id="bio" placeholder="Talk about yourself!">
+                <input type="text" id="bio" name="bioInput" placeholder="Talk about yourself!">
             </div>
 
             <div class="column right">
                 <img src="https://cdn1.iconfinder.com/data/icons/business-company-1/500/image-512.png" id="pic-one">
                 <label class="image-label" for="input-file1">Update Image</label>
-                <input class="image-input" type="file" accept="image/png, image/jpg, image/jpeg" id="input-file1">
+                <input class="image-input" type="file" name="pic1Input" accept="image/png, image/jpg, image/jpeg" id="input-file1">
 
                 <img src="https://cdn1.iconfinder.com/data/icons/business-company-1/500/image-512.png" id="pic-two">
                 <label class="image-label" for="input-file2">Update Image</label>
-                <input class="image-input" type="file" accept="image/png, image/jpg, image/jpeg" id="input-file2">
+                <input class="image-input" type="file" name="pic2Input"accept="image/png, image/jpg, image/jpeg" id="input-file2">
 
                 <img src="https://cdn1.iconfinder.com/data/icons/business-company-1/500/image-512.png" id="pic-three">
                 <label class="image-label" for="input-file3">Update Image</label>
-                <input class="image-input" type="file" accept="image/png, image/jpg, image/jpeg" id="input-file3">
+                <input class="image-input" type="file" name="pic3Input" accept="image/png, image/jpg, image/jpeg" id="input-file3">
                 
             </div>
             
