--- a/template/login.html
+++ b/template/login.html
@@ -27,7 +27,7 @@
             <button onclick="checkLogin()" type="button" class="btn">Login</button>
 
             <div class="link">
-                <p>Don't have an account? <a href="register.html">Register</a></p>
+                <p>Don't have an account? <a href="/register">Register</a></p>
             </div>
         </form>
     </div>
