--- a/template/register.html
+++ b/template/register.html
@@ -27,7 +27,7 @@
             <button onclick="checkEmail()" type="submit" class="btn">Create Profile</button>
 
             <div class="link">
-                <p>Already have an account? <a href="login.html">Login</a></p>
+                <p>Already have an account? <a href="/login">Login</a></p>
             </div>
 
         </form>
