[unstable] lots of html changes
login button doesnt work and changed a ton of html stuff

--- a/template/login.html
+++ b/template/login.html
@@ -45,7 +45,7 @@
                     if (password.length == 0 || password.length == 0){
                         alert("Blank field detected")
                     } else if (user) {
-                        window.location.href = "home.html";
+                        window.location.href = "home";
                     } else {
                         alert("Invalid email or password. Please try again.");
                     }
