--- a/template/messages.html
+++ b/template/messages.html
@@ -9,14 +9,14 @@
 </head>
 
 <header>
-    <div id="home"><a href="home.html">Home</a></div>
+    <div id="home"><a href="home">Home</a></div>
   
     <div id="nav">
         <nav>
             <ul>
-                <li><a href="matches.html">Matches</a></li>
-                <li><a href="messages.html">Messages</a></li>
-                <li><a href="profile.html">Profile</a></li>
+                <li><a href="matches">Matches</a></li>
+                <li><a href="messages">Messages</a></li>
+                <li><a href="profile">Profile</a></li>
             </ul>
         </nav>
     </div>
