added match list

--- a/template/matches.html
+++ b/template/matches.html
@@ -23,8 +23,17 @@
 </header>
 
 <body>
-    <div class="matches">
+    <div id="matches">
         <h1>matches</h1>
+        <div class="match-column">
+            <img class="pfp" src="https://t4.ftcdn.net/jpg/00/64/67/63/360_F_64676383_LdbmhiNM6Ypzb3FM4PPuFP9rHe7ri8Ju.jpg">
+            <h3 class="name">{{ name }}</h3>
+        </div>
+        
+        <div class="match-column">
+            <img class="pfp" src="https://t4.ftcdn.net/jpg/00/64/67/63/360_F_64676383_LdbmhiNM6Ypzb3FM4PPuFP9rHe7ri8Ju.jpg">
+            <h3 class="name">{{ name }}</h3>
+        </div>
     </div>
 </body>
 
