tried to fix the profile text

--- a/template/home.html
+++ b/template/home.html
@@ -33,10 +33,11 @@
             <div class="column middle">
                 <div class="profile-image">
                     <img src="https://t4.ftcdn.net/jpg/00/64/67/63/360_F_64676383_LdbmhiNM6Ypzb3FM4PPuFP9rHe7ri8Ju.jpg" alt="">
-                    <h1 class="user-name">{{ name }}, {{ age }}</h1>
-
-                    <h2 class="user-major">{{ major }}</h2>
-                    <p class="bio">{{ bio }}</p>
+                    <div class="profile-text">
+                        <h1 class="user-name">{{ name }}, {{ age }}</h1>
+                        <h2 class="user-major">{{ major }}</h2>
+                        <p class="bio">{{ bio }}</p>
+                    </div>
                 </div>
 
                 <div class="gallery">
