fixed profile editor page to fit all without scrolling

--- a/template/profileeditor.html
+++ b/template/profileeditor.html
@@ -22,7 +22,7 @@
     </div>
 </header>
 
-<body>
+<body class="profile-editor">
     <div id="profile-editor">
         <form action="home.html">
 
