joe biden profile worked

--- a/template/home.html
+++ b/template/home.html
@@ -32,11 +32,21 @@
     
             <div class="column middle">
                 <div class="profile-image">
-                    <img src="https://t4.ftcdn.net/jpg/00/64/67/63/360_F_64676383_LdbmhiNM6Ypzb3FM4PPuFP9rHe7ri8Ju.jpg" alt="">
+                    <img src= "{{ pfp }}" alt="">
                     <div class="profile-text">
-                        <h1 class="user-name">{{ name }}, {{ age }}</h1>
-                        <h2 class="user-major">{{ major }}</h2>
-                        <p class="bio">{{ bio }}</p>
+                        <!-- <script>
+                            const data = JSON.parse(localStorage.getItem('userData'));
+    
+                            const name = data.name;
+                            const age = data.age;
+    
+                            var documentelementid = "New Content";
+                            var element = document.getElementById("bruh");
+                            element.innerHTML = documentelementid;
+                        </script> -->
+                            <h1 class="user-name" id="bruh"> {{ name }} , {{ age }}</h1>
+                            <h2 class="user-major">{{ major }}</h2>
+                            <p class="bio">{{ bio }}</p>
                     </div>
                 </div>
 
