--- a/template/home.html
+++ b/template/home.html
@@ -53,9 +53,9 @@
                 <div class="gallery">
 
                     <div class="image">
-                        <a target="_blank" href="https://cdn1.iconfinder.com/data/icons/business-company-1/500/image-512.png">
-                          <img src="https://cdn1.iconfinder.com/data/icons/business-company-1/500/image-512.png" alt="Cinque Terre" width="500" height="500">
-                        </a>
+                        <!-- <a target="_blank" href="https://cdn1.iconfinder.com/data/icons/business-company-1/500/image-512.png"> -->
+                            <img src= "{{ pic1 }}" alt="">
+                        <!-- </a> -->
                         <div class="desc">Add a description of the image here</div>
                     </div>
                       
